--- a/static/css/bootstrap.2.css
+++ b/static/css/bootstrap.2.css
@@ -210,7 +210,8 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  /*font-family: "Libre Baskerville", Helvetica, Arial, sans-serif;*/
+  font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
@@ -313,7 +314,7 @@ h6,
   color: #111;
 }
 h1 {
-  font-weight: 700;
+  font-weight: 800;
 }
 h1 small,
 h2 small,
@@ -349,8 +350,8 @@ h2,
 .h2,
 h3,
 .h3 {
-  margin-top: 30px;
-  margin-bottom: 20px;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
 }
 h1 small,
 .h1 small,
@@ -372,8 +373,8 @@ h5,
 .h5,
 h6,
 .h6 {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 h4 small,
 .h4 small,
@@ -1421,14 +1422,16 @@ address {
     background: url('../images/lines.png') bottom repeat-x;
   }  
   p, li{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
-    margin: 20px 0 10px 0;
-    font-size: 20px;
-    font-size: 1.4em;
+    margin: 40px 0 20px 0;
+    font-size: 19px;
     font-weight: 400;
-    color: #111;
-    line-height: 1.625;
+    color: #040404;
+    line-height: 1.9;
+  }
+  li{
+    margin: 20px 0 20px 0;
   }
 
 input[type="text"],
@@ -1441,7 +1444,7 @@ input[type="submit"]{
     border: 1px solid #D1D1D1;
     border-radius: 4px;
     outline-color: #1EAEDB;
-    font-family: 'Roboto';
+    font-family: 'Lato';
     font-weight: 500;
     font-size: 1.6rem;
 }
@@ -1526,11 +1529,17 @@ input[type="submit"]:hover{
 /***** BREAK POINTS *********/
     .cover-img {
       height: 360px;
+      margin: auto;
+      display: block;
+      max-width: 100%;
     }
   @media (max-width: 719px) {
     p, li{
-      margin: 20px 0 10px 0;
-      font-size: 1.2em;
+      margin: 30px 0 20px 0;
+      font-size: 17px;
+    }
+    li{
+      margin: 20px 0 20px 0;
     }
     .site-container {
         padding-left: 5% !important;
@@ -1546,7 +1555,16 @@ input[type="submit"]:hover{
   }
 
   li{
-  list-style-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAKCAYAAABmBXS+AAAAOUlEQVQoU2P8ZcTwn+0cAyMDHsAIUgSSx6cQrghmEDbFGIqwKcapCFkxeSbhdRNB3xEMJ3yBCJMDAMSHGwtctQZBAAAAAElFTkSuQmCC");
+    list-style-image: url("../images/bullet.png");
+    margin-left: 20px;
+  }
+  .bullet{
+    background: url(../images/bullet.png);
+    background-repeat: no-repeat;
+    background-position-y: 4px;
+    margin-left:5px;
+    padding-left: 12px;
+    padding-bottom: 9px;
   }
 
   .entry_wrapper p {
@@ -1563,4 +1581,47 @@ input[type="submit"]:hover{
 }
 .postTitleWithAuthor h1 {
   margin-top:0;
+}
+.highlight {
+  padding: 15px;
+  color: #f9f9f9;
+  background-color: #1b1b1b;
+  margin-bottom: 30px;
+  -webkit-box-shadow: 0px 2px 10px 1px rgba(60, 60, 60, 0.9);
+  -moz-box-shadow: 0px 2px 10px 1px rgba(60, 60, 60, 0.9);
+  box-shadow: 0px 2px 10px 1px rgba(60, 60, 60, 0.9);
+}
+.highlight b {
+  color:#ff6464;
+}
+@media screen and (min-width: 768px){
+  h1,h2,h3 {
+    margin-top:64px;
+    margin-bottom:20px;
+  }
+}
+
+.mybutton {
+  background: #de1b1b;
+  color: #111;
+  padding: 14px;
+  font-size:16px;
+  line-height: 60px;
+  text-transform: uppercase;
+  border-radius: 3px;
+  text-decoration: none;
+  font-family: Montserrat;
+}
+a.mybutton:hover, a.mybutton:focus{
+  text-decoration: none;
+  background: #1EAEDB;
+  color: #111;
+}
+
+a, button, input:focus, input[type="button"], input[type="reset"], input[type="submit"], textarea:focus, .button {
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
